--- a/index.html
+++ b/index.html
@@ -176,29 +176,135 @@
       </div>
     </main>
 
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi maxime accusamus, quam suscipit praesentium
-      quia, nihil recusandae aperiam dignissimos provident, perspiciatis numquam quasi nesciunt eaque fuga. Accusantium,
-      voluptatem atque? Dolorum iste quos corrupti aperiam, tenetur voluptatem officiis magni. Soluta exercitationem
-      laudantium quo maxime beatae obcaecati mollitia enim quia natus voluptatum. Unde beatae vitae tempore vel hic
-      dolore perferendis architecto? Repellat nihil at vero deleniti, fugit dignissimos neque sint alias voluptatibus
-      aperiam soluta veritatis officia sit doloribus porro accusantium, corrupti qui sapiente? Tempora officiis
-      doloremque iusto cupiditate recusandae suscipit dolorum? Laboriosam eligendi ut totam dicta repellendus laborum
-      aspernatur id quidem, quas iure, facilis minus, voluptate esse sed nesciunt ad doloremque unde ex. Aut voluptate
-      veritatis, quos illo tenetur dicta optio? Animi molestias, sint fugiat aut iste aperiam laudantium possimus
-      consequuntur laborum quidem nam quas et provident repudiandae amet beatae minus molestiae excepturi? Iure
-      assumenda rerum neque porro esse animi vel. Ipsa soluta deleniti repudiandae neque nemo modi doloremque, debitis
-      expedita, voluptate libero harum error incidunt molestiae magni repellat, cumque sint iusto maxime. Neque,
-      voluptatum accusantium aspernatur provident vitae dolore reprehenderit? Rerum dolorum voluptas totam odit
-      molestiae rem expedita ea quas quia? Repellendus, sunt quaerat? Ratione assumenda nesciunt quisquam esse eius,
-      eos, amet iusto delectus maxime similique ut adipisci quam quasi. Minus iure quod cum perspiciatis repudiandae
-      alias voluptate quia ex quis odit, voluptatem nihil, distinctio magnam error? Laborum illo explicabo eum,
-      incidunt, ad rerum maiores sapiente impedit laboriosam adipisci veritatis. Dicta atque officiis mollitia nulla
-      omnis praesentium, rem non architecto ducimus ea! Explicabo totam sequi accusantium molestiae, laborum omnis
-      corrupti placeat vel voluptate deleniti iusto autem incidunt eius quidem delectus! Fugit laudantium voluptas
-      praesentium maxime voluptatem, incidunt ratione officiis maiores labore ad quas eum facilis. Beatae quo officia
-      magnam quae, tenetur incidunt atque ipsum inventore quaerat enim error, quas autem!
-    </p>
+    <section class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="author-img">
+              <img src="../assets/img/nosotros.jpg" class="img-fluid" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-7 d-flex flex-column justify-content-center">
+            <div class="section-title mt-4">
+              <h2>Nuestra Empresa</h2>
+
+              <p>
+                Somos una empresa que dio sus primeros pasos en el año 2012, esperanzados en un proyecto de vida, la
+                cual fue tomando forma a través del tiempo, partiendo con uno a dos trabajadores, hoy en día ya
+                ascienden a más de 25 empleados activos y permanentes en la empresa, hemos transformado nuestro oficio
+                en una profesión. Somos un equipo especializado en el área de carpinteria, nuestro personal consta con
+                años de experiencia y con la sabiduría necesaria para llevar a cabo cada proyecto idealizado por
+                nuestros clientes, cubrimos toda el área de la región y a lo largo del pais
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <hr>
+    <section class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div id="terrazas" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner bg-white">
+                <div class="carousel-item active">
+                  <img src="../assets/img/servicios/terrazas/terraza_01.jpg" alt="" />
+                </div>
+                <div class="carousel-item">
+                  <img src="../assets/img/servicios/terrazas/terraza_02.jpg" alt="" />
+                </div>
+                <div class="carousel-item">
+                  <img src="../assets/img/servicios/terrazas/terraza_03.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 d-flex flex-column justify-content-center">
+            <div class="section-title mt-4">
+              <h2>Terrazas & Cobertizos</h2>
+
+              <p>
+                Nuestras terrazas de madera principalmente Pino Oregón Nacional, son hechas a la medida según cada
+                proyecto, en donde valoramos por sobre todo la calidad, durabilidad y la prolijidad en su construcción.
+                Nuestro capacitado equipo, velará por un trabajo limpio y a la perfección en el menor tiempo posible,
+                además de un servicio integral y en atención personalizada en la pre y post venta.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div id="quinchos" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner bg-white">
+                <div class="carousel-item active">
+                  <img src="../assets/img/servicios/quinchos/quinchos_01.jpg" alt="" />
+                </div>
+                <div class="carousel-item">
+                  <img src="../assets/img/servicios/quinchos/quinchos_02.jpg" alt="" />
+                </div>
+                <div class="carousel-item">
+                  <img src="../assets/img/servicios/quinchos/quinchos_03.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 d-flex flex-column justify-content-center">
+            <div class="section-title mt-4">
+              <h2>Quinchos</h2>
+
+              <p>
+                Nuestros Quinchos son construidos de hormigón liviano, que permite un armado rápido y limpio, su
+                terminación de cemento suave permite que sea impermeable y completamente lavable, con excelente
+                durabilidad en el tiempo. La parrilla es de bandejas en v y depósito de grasas en acero inoxidable con
+                sistema de elevación frontal. Además de poder incluir los accesorios de gusto del cliente, como:
+                Campanas, puertas, mesones de hormigón, madera, hornos, lavamanos, parrilla a gas, frigobar, leñero,
+                entre otros.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div id="costavistas" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner bg-white">
+                <div class="carousel-item active">
+                  <img src="../assets/img/servicios/cortavista/cortavista_01.png" alt="" />
+                </div>
+                <div class="carousel-item">
+                  <img src="../assets/img/servicios/cortavista/cortavista_02.png" alt="" />
+                </div>
+                <div class="carousel-item">
+                  <img src="../assets/img/servicios/cortavista/cortavista_03.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 d-flex flex-column justify-content-center">
+            <div class="section-title mt-4">
+              <h2>Cortavistas</h2>
+              <p>
+                Los Cortavista de madera son una estructura que permite revestir o subir muros bajos, otorgando una
+                mayor sensación de privacidad a su entorno. Además de dar un toque moderno y acogedor. También permiten
+                separar distintos espacios de su casa como logias o quinchos. Los corta vistas son hechos en Pino
+                Oregón, Pino Insigne.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <footer class="py-3 footer-content" style="background-image: url(assets/img/footer_bg.png)">
       <div class="container text-white">
